# gjitenkai

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GSettings.cmake  Makefile  MinGW.cmake  NSIS.cmake  README  README.md  cmake_install.cmake  config.h  config.h.in  gjitenkai.desktop  index.html  install_manifest.txt  params.json  style.css
UI/: gjiten.glade~  gjitenkai.glade  gjitenkai.glade~  kanjidic.glade  kanjidic.glade~  worddic.glade  worddic.glade~
data/: apps.gjitenkai.gschema.xml
data/gschemas/: gschemas.compiled
data/gschemas/windows/: gjitenkai.gschema.xml
gjitenkai/: country_codes  url
gjitenkai/ui/: #gjitenkai.ui#  gjitenkai.ui  kanjidic.ui  worddic.ui
po/: gjitenkai.pot  kanjidic.pot  worddic.pot  worddic_fr.mo  worddic_fr.po
po/fr/: gjitenkai.mo  gjitenkai.po  kanjidic.mo  kanjidic.po  worddic.mo  worddic.po
po/ja/: gjitenkai.mo  gjitenkai.po  kanjidic.mo  kanjidic.po  worddic.mo  worddic.po
po/jp/: gjitenkai.mo  gjitenkai.po  kanjidic.mo  worddic.mo
resources/: gjitenkai.rc
resources/NSIS/: NSIS.definitions.nsh.in
share/: loaders.cache
share/gjitenkai/: gjitenkai.glade  gjitenkai.ui  kanjidic.glade  worddic.glade  worddic.ui
share/gjitenkai/ui/: gjitenkai.ui  worddic.ui
share/glib-2.0/schemas/: gjitenkai.gschema.xml
share/glib-2.0/schemas/NSIS/: gjitenkai.gschema.xml
share/glib-2.0/schemas/windows/: gjitenkai.gschema.xml
src/common/: callbacks.c  conf.c  conf.h  constants.h  dicentry.c  dicentry.h  dicfile.c  dicfile.h  dicutil.c  dicutil.h  error.c  error.h
src/gjitenkai/: callbacks.c  dicfile.c  dicfile.h  gjitenkai.c  gjitenkai.h  main.c
src/kanjidic/: callbacks.c  conf.c  conf.h  constants.h  kanji_item.c  kanji_item.h  kanjidic.c  kanjidic.h  kanjifile.c  kanjifile.h  kanjiutils.c  kanjiutils.h  main.c  preferences.c  radical_list.c  radical_window.c  radical_window.h
src/worddic/: #callbacks.c#  #conf.h#  #dicentry.c#  #sense.c#  #worddic.c#  #worddic_dicfile.h#  .#callbacks.c  .#conf.h  .#dicentry.c  .#sense.c  .#worddic.C  .#worddic.c  .#worddic_dicfile.h  callbacks.c  conf.c  conf.h  dicentry.c  dicentry.h  dicresult.c  dicresult.h  gloss.c  gloss.h  inflection.c  inflection.h  main.c  preferences.c  preferences.h  sense.c  sense.h  unit_style.h  worddic.c  worddic.h  worddic_dicfile.c  worddic_dicfile.h
src/worddic/parser/: edict.c  jmdict.c  jmdict.h
test/: dicfile  dicfile.c  dicfile_init_inflection.c  dicfile_jmdict  dicfile_jmdict.c  dicfile_search.c  dicfile_search_inflection.c  full2half  full2half.c  parse_line  parse_line.c  parse_line_stress.c  print_entry.c  print_entry.h  replace_radical.c
utils/: gsettings_keys.sh  gsettings_monitor.sh
